--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,35 @@
 {
-    "name": "b13/geocoding",
-    "type": "typo3-cms-extension",
-    "description": "Services for using geocoding from Google inside TYPO3 database records",
-    "homepage": "https://github.com/b13/t3ext-geocoding",
-    "license": "GPL-2.0-or-later",
-    "keywords": ["TYPO3 CMS", "TYPO3", "Google Geocoding"],
-    "support": {
-        "support": "https://github.com/b13/t3ext-geocoding"
-    },
-    "require": {
-        "php": ">=5.5.0 || >=7.0 <7.3",
-        "typo3/cms-core": "^8.7.0 || <10.0"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.1"
-    },
-	"extra": {
-		"typo3/cms": {
-			"extension-key": "geocoding"
-		}
-	},
-    "replace": {
-        "geocoding": "self.version"
-    },
-    "autoload": {
-        "psr-4": {
-            "B13\\Geocoding\\": "Classes/"
-         }
+  "name": "b13/geocoding",
+  "type": "typo3-cms-extension",
+  "description": "Services for using geocoding from Google inside TYPO3 database records",
+  "homepage": "https://github.com/b13/t3ext-geocoding",
+  "license": "GPL-2.0-or-later",
+  "keywords": [
+    "TYPO3 CMS",
+    "TYPO3",
+    "Google Geocoding"
+  ],
+  "support": {
+    "support": "https://github.com/b13/t3ext-geocoding"
+  },
+  "require": {
+    "php": ">=7.0 <7.3",
+    "typo3/cms-core": "^8.7.0 || <10.0"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^2.1"
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "geocoding"
     }
+  },
+  "replace": {
+    "geocoding": "self.version"
+  },
+  "autoload": {
+    "psr-4": {
+      "B13\\Geocoding\\": "Classes/"
+    }
+  }
 }
